:sparkles: Integerating graphQL
connected with supabase

--- a/package.json
+++ b/package.json
@@ -12,18 +12,23 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
     "prisma": "^5.8.1",
     "tsc-watch": "^6.0.4",
     "typescript": "^5.3.3"
   },
   "dependencies": {
     "@apollo/server": "^4.10.0",
-    "@prisma/client": "5.8.1",
+    "@prisma/client": "^5.8.1",
     "@supabase/supabase-js": "^2.39.3",
     "@types/body-parser": "^1.19.5",
+    "axios": "^1.6.5",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "graphql": "^16.8.1"
+    "graphql": "^16.8.1",
+    "jsonwebtoken": "^9.0.2"
   }
 }
