--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.521.0",
+    "@aws-sdk/s3-request-presigner": "^3.521.0",
     "@apollo/server": "^4.10.0",
     "@prisma/client": "^5.8.1",
     "@supabase/supabase-js": "^2.39.3",
